compiler/testData/asJava/lightClasses/compilationErrors/PrivateInTrait.java
public interface PrivateInTrait {
    static final class DefaultImpls {
        private static final java.lang.String getNn(PrivateInTrait privateInTrait) { /* compiled code */ }

        private static final void setNn(PrivateInTrait privateInTrait, java.lang.String p) { /* compiled code */ }

        private static final java.lang.String getN(PrivateInTrait privateInTrait) { /* compiled code */ }
    }
}